--- a/requirements.txt
+++ b/requirements.txt
@@ -1,216 +1,14 @@
-absl-py==2.0.0
-aiofiles==23.2.1
-aiohttp==3.8.5
-aiosignal==1.3.1
-albumentations==1.3.1
-annotated-types==0.6.0
-anyio==3.7.1
-asgiref==3.7.2
-astunparse==1.6.3
-async-timeout==4.0.3
-attrs==23.1.0
-Babel==2.10.3
-bcrypt==3.2.2
-bidict==0.22.1
-blinker==1.6.2
-cachetools==5.3.1
-certifi==2023.7.22
-chardet==5.1.0
-charset-normalizer==3.3.0
-click==8.1.7
-cmake==3.27.6
-colorama==0.4.6
-coloredlogs==15.0.1
-configobj==5.0.8
-contourpy==1.1.1
-cryptography==38.0.4
-cupshelpers==1.0
-cycler==0.12.0
-Cython==3.0.2
-dbus-python==1.3.2
-defer==1.0.6
-distro==1.8.0
-distro-info==1.5
-Django==4.2.5
-django-filter==23.3
-djangorestframework==3.14.0
-dnspython==2.4.2
-duplicity==0.8.22
-easydict==1.10
-email-validator==2.0.0.post2
-eventlet==0.33.3
-faiss-cpu==1.7.4
-fastapi==0.103.2
-fasteners==0.17.3
-filelock==3.12.4
-Flask==3.0.0
-Flask-Cors==4.0.0
-Flask-SocketIO==5.3.6
-flatbuffers==23.5.26
-fonttools==4.43.0
-frozenlist==1.4.0
-future==0.18.2
-gast==0.5.4
-geographiclib==2.0
-geopy==2.4.0
-google-auth==2.23.2
-google-auth-oauthlib==1.0.0
-google-pasta==0.2.0
-graphviz==0.8.4
-greenlet==3.0.0
-grpcio==1.59.0
-gyp==0.1
-h11==0.14.0
-h5py==3.9.0
-httpcore==0.18.0
-httplib2==0.20.4
-httptools==0.6.0
-httpx==0.25.0
-humanfriendly==10.0
-idna==3.4
-imageio==2.31.5
-importlib-metadata==4.12.0
-imutils==0.5.4
-insightface==0.7.3
-itsdangerous==2.1.2
-jaraco.classes==3.2.1
-jeepney==0.8.0
-Jinja2==3.1.2
-joblib==1.3.2
-jsonpatch==1.32
-jsonpointer==2.0
-jsonschema==4.6.0
-keras==2.14.0
-keyring==23.9.3
-kiwisolver==1.4.5
-language-selector==0.1
-launchpadlib==1.11.0
-lazr.restfulclient==0.14.5
-lazr.uri==1.0.6
-lazy_loader==0.3
-libclang==16.0.6
-lit==17.0.2
-llvmlite==0.41.0
-lockfile==0.12.2
-louis==3.24.0
-Mako==1.2.4.dev0
-Markdown==3.4.4
-markdown-it-py==2.1.0
-MarkupSafe==2.1.3
-matplotlib==3.8.0
-mdurl==0.1.2
-ml-dtypes==0.2.0
-monotonic==1.6
-more-itertools==8.10.0
-mpmath==1.3.0
-multidict==6.0.4
-mxnet-cu110==1.9.1
-netifaces==0.11.0
-networkx==3.1
-numba==0.58.0
-numpy==1.25.2
-nvidia-cublas-cu11==11.10.3.66
-nvidia-cuda-cupti-cu11==11.7.101
-nvidia-cuda-nvrtc-cu11==11.7.99
-nvidia-cuda-runtime-cu11==11.7.99
-nvidia-cudnn-cu11==8.5.0.96
-nvidia-cufft-cu11==10.9.0.58
-nvidia-curand-cu11==10.2.10.91
-nvidia-cusolver-cu11==11.4.0.1
-nvidia-cusparse-cu11==11.7.4.91
-nvidia-nccl-cu11==2.14.3
-nvidia-nvtx-cu11==11.7.91
-oauthlib==3.2.2
-olefile==0.46
-onnx==1.14.1
-onnxruntime-gpu==1.15.0
-opencv-python==4.8.1.78
-opencv-python-headless==4.8.1.78
-opt-einsum==3.3.0
-orjson==3.9.7
-packaging==23.2
-paramiko==2.12.0
-pexpect==4.8.0
-Pillow==10.0.1
-prettytable==3.9.0
-protobuf==4.24.3
-psycopg2==2.9.9
-ptyprocess==0.7.0
-pyasn1==0.5.0
-pyasn1-modules==0.3.0
-pycairo==1.20.1
-pycups==2.0.1
-pydantic==2.4.2
-pydantic-extra-types==2.1.0
-pydantic-settings==2.0.3
-pydantic_core==2.10.1
-Pygments==2.14.0
-PyGObject==3.44.1
-PyJWT==2.6.0
-PyNaCl==1.5.0
-pyparsing==3.1.1
-pyrsistent==0.18.1
-pyserial==3.5
-python-apt==2.5.3+ubuntu1
-python-dateutil==2.8.2
-python-debian==0.1.49+ubuntu2
-python-dotenv==1.0.0
-python-engineio==4.7.1
-python-multipart==0.0.6
-python-socketio==5.9.0
-pytz==2023.3.post1
-PyWavelets==1.4.1
-pyxdg==0.28
-PyYAML==6.0.1
-qudida==0.0.4
-redis==5.0.1
-reportlab==3.6.12
-requests==2.31.0
-requests-oauthlib==1.3.1
-rich==13.3.1
-rsa==4.9
-scikit-image==0.21.0
-scikit-learn==1.3.1
-scipy==1.11.3
-screen-resolution-extra==0.0.0
-SecretStorage==3.3.3
-simple-websocket==0.10.1
-six==1.16.0
-sniffio==1.3.0
-sqlparse==0.4.4
-starlette==0.27.0
-sympy==1.12
-systemd-python==235
-tensorboard==2.14.1
-tensorboard-data-server==0.7.1
-tensorflow==2.14.0
-tensorflow-estimator==2.14.0
-tensorflow-io-gcs-filesystem==0.34.0
-termcolor==2.3.0
-threadpoolctl==3.2.0
-tifffile==2023.9.26
-torch==2.0.1
-tqdm==4.66.1
-triton==2.0.0
-typing_extensions==4.8.0
-ubuntu-advantage-tools==8001
-ubuntu-drivers-common==0.0.0
-ufw==0.36.1
-ujson==5.8.0
-unattended-upgrades==0.1
-urllib3==2.0.6
-usb-creator==0.3.16
-uvicorn==0.23.2
-uvloop==0.17.0
-wadllib==1.3.6
-watchfiles==0.20.0
-wcwidth==0.2.8
-websocket-server==0.6.4
-websockets==11.0.3
-Werkzeug==3.0.0
-wrapt==1.14.1
-wsproto==1.2.0
-xdg==5
-xkit==0.0.0
-yarl==1.9.2
-zipp==1.0.0
+djangorestframework
+insightface
+faiss-cpu
+imutils
+torch
+websockets
+opencv-python
+django-filter
+psycopg2
+onnxruntime-gpu
+python-dotenv
+celery
+redis
+django
